REGRESSION(r244372): [GTK][WPE] fast/images/icon-decoding.html and others are failing https://bugs.webkit.org/show_bug.cgi?id=197251

Reviewed by Adrian Perez de Castro.

Source/WebCore:

Return 0_s as the duration of incomplete frames in an animation.

Covered by existing tests.

* platform/image-decoders/ScalableImageDecoder.cpp:
(WebCore::ScalableImageDecoder::frameDurationAtIndex const):

LayoutTests:

Update expectations for passing tests.

* platform/gtk/TestExpectations:
* platform/gtk/fast/images/icon-decoding-expected.txt:
* platform/wpe/TestExpectations:
* platform/wpe/fast/images/icon-decoding-expected.txt:


Canonical link: https://commits.webkit.org/216668@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251431 268f45cc-cd09-0410-ab3c-d52691b4dbfc